fix: too much burst

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 #root {
+  position: relative;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
@@ -48,10 +49,10 @@ h1 {
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+#animation_layout {
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  z-index: 100;
 }
